--- a/css/style.css
+++ b/css/style.css
@@ -40,10 +40,24 @@ header nav a:hover{
 }
 
 /* Filme Principal*/
+
 .filme-principal{
+
     font-size: 16px;
     background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)100%),
      url('/img/capa1.jpg');
     height: 400px;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.filme-principal .descricao{
+    margin-bottom: 60px;
+}
+
+.titulo{
+    font-size: 40px;
 }
