--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ header .container{
     justify-content: space-between;
 }
 header .logo{
-    font-family: 'Arial Black',Times;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 40px;
     margin-left: 5px;
 }
@@ -42,6 +42,7 @@ header nav a:hover{
 /* Filme Principal*/
 
 .filme-principal{
+  
 
     font-size: 16px;
     background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)100%),
@@ -52,12 +53,35 @@ header nav a:hover{
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+   
 }
 
 .filme-principal .descricao{
-    margin-bottom: 60px;
+    margin-top: 10px;
+    margin-bottom: 40px;
 }
 
-.titulo{
+.filme-principal .titulo{
+    margin-top: 15%;
     font-size: 40px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+.botao{
+    padding: 15px 30px;
+    color: white;
+    background-color: rgba(0,0,0,.5);
+    border: none;
+        border-radius: 5px;
+    margin-right: 15px;
+    font-size: 12px;
+    cursor: pointer;
+    transition: .4s ease all;
+}
+.botao:hover{
+    background-color: #fff;
+    color: black;
+}
+.botao i{
+    margin-right: 8px;
+}
+
