--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 }
 
 /* Elementos Base*/
+
 body{
     color: white;
     background: var(--preta);
@@ -24,16 +25,14 @@ header .container{
     justify-content: space-between;
 }
 header .logo{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Oswald', sans-serif;
     font-size: 40px;
     margin-left: 5px;
 }
-
 header nav a{
     color: #aaa;
     text-decoration: none;
     margin: 10px;
-
 }
 header nav a:hover{
     color: #fff ;
@@ -42,25 +41,20 @@ header nav a:hover{
 /* Filme Principal*/
 
 .filme-principal{
-  
-
     font-size: 16px;
     background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)100%),
-     url('/img/capa1.jpg');
+     url('/img/capa2.jpg');
     height: 400px;
     background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
-   
+    align-items: flex-start; 
 }
-
 .filme-principal .descricao{
     margin-top: 10px;
     margin-bottom: 40px;
 }
-
 .filme-principal .titulo{
     margin-top: 15%;
     font-size: 40px;
@@ -84,4 +78,9 @@ header nav a:hover{
 .botao i{
     margin-right: 8px;
 }
-
+.container{
+    margin-left: 25px;
+}
+.filme-principal .container {
+    width: 70%;
+}
