--- a/css/style.css
+++ b/css/style.css
@@ -84,3 +84,9 @@ header nav a:hover{
 .filme-principal .container {
     width: 70%;
 }
+.box-filme{
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 15px;
+}
