--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,6 @@ header nav a:hover{
     display: block;
     border-radius: 15px;
 }
-.filme-principal{
+.carrosel-filmes{
     margin-top: 5px;
 }
